整理 piano 控件代码，优化控件宽高

--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,14 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        //bintray-release 插件 把库上传到jcenter的相关配置
+        classpath 'com.novoda:bintray-release:0.7.0'
     }
 }
 
@@ -19,6 +22,19 @@ allprojects {
     repositories {
         google()
         jcenter()
+    }
+
+    //bintray-release 插件 把库上传到jcenter的相关配置
+    tasks.withType(Javadoc) {
+        options{
+            encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
+        }
+    }
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
     }
 }
 
